--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "url": "https://github.com/efournier92/TabClear/issues"
   },
   "dependencies" : {
-    "body-parser"    : "^1.4.3",
-    "express"        : "^4.13.4",
-    "method-override": "^2.1.3",
-    "mongoose"       : "^4.4.12",
-    "morgan"         : "^1.1.1"
+    "body-parser"      : "^1.4.3",
+    "express"          : "^4.13.4",
+    "method-override"  : "^2.1.3",
+    "mongoose"         : "^4.4.12",
+    "morgan"           : "^1.1.1",
+    "angular"          : "1.6.0",
+    "angular-route"    : "1.6.0",
+    "angular-gridster" : "^0.13.14"
   }
 }
