--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "method-override": "^2.1.3",
     "mongodb": "^2.2.16",
     "mongoose": "^4.4.12",
-    "morgan": "^1.1.1"
+    "morgan": "^1.1.1",
+    "passport": "^0.3.2"
   }
 }
