--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my_new_tab",
+  "name": "NerveCenter",
   "version": "1.0.0",
   "description": "Metro-style new tab page with advanced customizability.",
   "main": "index.js",
