--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^3.3.7",
     "express": "^4.13.4",
     "javascript-detect-element-resize": "^0.5.3",
+    "jsonwebtoken": "^7.2.1",
     "method-override": "^2.1.3",
     "mongoose": "^4.4.12",
     "morgan": "^1.1.1"
