--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^7.2.1",
     "method-override": "^2.1.3",
     "mongoose": "^4.4.12",
-    "morgan": "^1.1.1"
+    "morgan": "^1.1.1",
+    "node-env-file": "^0.1.8"
   }
 }
