--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "method-override": "^2.1.3",
     "mongoose": "^4.4.12",
     "morgan": "^1.1.1",
-    "node-env-file": "^0.1.8"
+    "node-env-file": "^0.1.8",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
