--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.1.1",
     "node-env-file": "^0.1.8",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pryjs": "^1.0.3"
   }
 }
