--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "javascript-detect-element-resize": "^0.5.3",
     "jsonwebtoken": "^7.2.1",
     "method-override": "^2.1.3",
+    "mongodb": "^2.2.16",
     "mongoose": "^4.4.12",
     "morgan": "^1.1.1",
     "node-env-file": "^0.1.8",
