--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-env-file": "^0.1.8",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "pryjs": "^1.0.3"
+    "pryjs": "^1.0.3",
+    "requirejs": "^2.3.2"
   }
 }
