--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angular-gridster": "^0.13.14",
     "body-parser": "^1.10.2",
     "cookie-parser": "^1.3.5",
     "debug": "~2.1.1",
