create Quad class

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.5.1",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
+    "pg-ng-dropdown": "^1.1.1",
     "pryjs": "^1.0.3",
     "serve-favicon": "~2.2.0"
   },
@@ -32,4 +33,3 @@
     "gulp-watch": "^4.3.4"
   }
 }
-
