--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "NerveCenter",
-  "version": "1.0.0",
+  "name": "MEAN-stack-authentication",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
     "angular-gridster": "^0.13.14",
     "angular-ui-bootstrap": "^2.5.0",
