--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "NerveCenter",
   "version": "1.0.0",
+  "start": "node app.js"
   "dependencies": {
     "angular-gridster": "^0.13.14",
     "angular-ui-bootstrap": "^2.5.0",
