--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.2.0",
+  },
+  "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-ng-html2js": "^0.2.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
-    "gulp-watch": "^5.3.4"
+    "gulp-watch": "^4.3.4"
   },
   "scripts": {
     "start": "node app.js"
