--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "NerveCenter",
+  "description": "Metro-style grid-based new tab app.",
   "version": "1.0.0",
+  "main": "app.js",
+  "engines": {
+    "node": "4.4.5"
+  },
   "dependencies": {
     "angular-gridster": "^0.13.14",
     "angular-ui-bootstrap": "^2.5.0",
@@ -9,14 +14,11 @@
     "debug": "~2.1.1",
     "express": "~4.11.1",
     "express-jwt": "^3.0.1",
-    "jade": "~1.9.1",
     "jsonwebtoken": "^5.0.4",
     "mongoose": "^4.1.2",
     "morgan": "~1.5.1",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
-    "pg-ng-dropdown": "^1.1.1",
-    "pryjs": "^1.0.3",
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
@@ -27,5 +29,10 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-watch": "^4.3.4"
-  }
+  },
+  "scripts": {
+    "start": "node app.js"
+  },
+  "author" : "Eric Fournier",
+  "license": "MIT"
 }
