--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "devDependencies": {
     "browser-sync": "^2.18.12",
+    "del": "^2.2.2",
     "gulp": "^3.9.0",
+    "gulp-cache": "^0.4.6",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-if": "^2.0.2",
@@ -37,7 +39,8 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.5.4",
     "gulp-useref": "^3.1.2",
-    "gulp-watch": "^4.3.4"
+    "gulp-watch": "^4.3.4",
+    "run-sequence": "^1.2.2"
   },
   "scripts": {
     "start": "node app.js"
