--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "engines": {
     "node": "4.4.5"
   },
-  "repository" :
-  { 
-    "type" : "git",
-    "url" : "https://github.com/efournier92/nervecenter.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/efournier92/nervecenter.git"
   },
   "dependencies": {
     "angular-gridster": "^0.13.14",
@@ -28,13 +27,27 @@
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
+    "babelify": "^7.3.0",
+    "browser-sync": "^2.18.12",
+    "browserify": "^14.4.0",
+    "del": "^2.2.2",
+    "fs": "0.0.1-security",
     "gulp": "^3.9.0",
+    "gulp-cache": "^0.4.6",
     "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.3.0",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-ng-html2js": "^0.2.0",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
-    "gulp-watch": "^4.3.4"
+    "gulp-uglify": "^1.5.4",
+    "gulp-useref": "^3.1.2",
+    "gulp-watch": "^4.3.4",
+    "gutil": "^1.6.4",
+    "run-sequence": "^1.2.2",
+    "source": "0.0.3",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "start": "node app.js"
