--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "engines": {
     "node": "4.4.5"
   },
-  "repository" :
-  { 
-    "type" : "git",
-    "url" : "https://github.com/efournier92/nervecenter.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/efournier92/nervecenter.git"
   },
   "dependencies": {
     "angular-gridster": "^0.13.14",
@@ -28,13 +27,20 @@
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
+    "browser-sync": "^2.18.12",
+    "del": "^2.2.2",
     "gulp": "^3.9.0",
+    "gulp-cache": "^0.4.6",
     "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-if": "^2.0.2",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-ng-html2js": "^0.2.0",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
-    "gulp-watch": "^4.3.4"
+    "gulp-uglify": "^1.5.4",
+    "gulp-useref": "^3.1.2",
+    "gulp-watch": "^4.3.4",
+    "run-sequence": "^1.2.2"
   },
   "scripts": {
     "start": "node app.js"
