--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^4.0.0",
     "express": "~4.11.1",
     "express-jwt": "^3.0.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-imagemin": "^3.3.0",
     "jsonwebtoken": "^5.0.4",
     "mongoose": "^4.1.2",
     "morgan": "~1.5.1",
@@ -27,6 +29,10 @@
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-plugin-transform-es2015-block-scoping": "^6.24.1",
+    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.12",
     "del": "^2.2.2",
     "gulp": "^3.9.0",
