--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "requirejs": "^2.3.3",
-    "rollup-stream": "^1.23.1",
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
@@ -49,9 +48,7 @@
     "gulp-uglify": "^1.5.4",
     "gulp-useref": "^3.1.2",
     "gulp-watch": "^4.3.4",
-    "rollup-stream": "^1.23.1",
-    "run-sequence": "^1.2.2",
-    "vinyl-source-stream": "^1.1.0"
+    "run-sequence": "^1.2.2"
   },
   "scripts": {
     "start": "node app.js"
